[package]
name = "burnlm-registry"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
burnlm-inference = { path = "../burnlm-inference", default-features = false }
burnlm-macros = { path = "../burnlm-macros" }

# plugins
burnlm-inference-llama3 = { path = "../burnlm-inference-llama3" }
burnlm-inference-template = { path = "../burnlm-inference-template" }
burnlm-inference-tinyllama = { path = "../burnlm-inference-tinyllama" }
