[package]
name = "burnlm-server"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
axum.workspace = true
chrono = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
async-openai = "0.26.0"
rstest = { workspace = true }

[[bin]]
name = "server"
path = "src/bin/server.rs"
